<resources>
    <string name="app_name">Up Keep</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_account">Already Have An</string>
    <string name="account"><u>Account?</u></string>
    <string name="welcome">Welcome Keep Up</string>
    <string name="sign_with_google">Sign in with Google+</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="email">Email</string>
    <string name="doted_large">--------------------------------------------------------------------</string>
    <string name="doted_small">--------------------------------------------------------------------</string>
    <string name="doted_medium">-------------------------------------------------------------------</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_passwordpopup">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="dont_account">Don\'t Have Account?</string>
    <string name="signup">Sign Up</string>
    <string name="signup_underline"><u>Sign Up</u></string>
    <string name="eaddress">Email Address</string>
    <string name="ok">OK</string>
    <string name="verify_account">Verify Your Account Email</string>
    <string name="code_email">Please Enter Code Your Email</string>
    <string name="dont_receive">Didn\'t Receive The Verification Code?</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="banking">Banking</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>
    <string name="repair">Repair</string>
    <string name="sample_dr">123 Sample Dr, Spokane WA</string>
    <string name="pennsyivania_ave">1600 Pennsyivania Ave, Washinggton</string>
    <string name="ave_new_york">3683 5th Ave New York, NY</string>
    <string name="manage_banking">Manage Banking</string>
    <string name="manage_tenants">Manage Tenants</string>
    <string name="notifications">Notifications</string>
    <string name="my_properties">My Properties</string>
    <string name="settings">Setting</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="get_started">Get Started</string>
    <string name="support">Support</string>
    <string name="sign_out">Sign Out</string>
    <string name="repair_contacts">Repair Contacts</string>
    <string name="terms_condition">I agree to the Terms &amp; conditions</string>
    <string name="completed">Completed</string>
    <string name="complete">Complete</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="reapair_contacts">Repair Contacts</string>
    <string name="agree_to_the">I AGREE TO THE</string>
    <string name="terms_and_conditions"><u>TERMS &amp; CONDITIONS</u></string>
    <string name="no">13</string>
    <string name="repair_text">Hello how are you</string>
    <string name="text">oifoj fnkj nkjfnk kjfbn nkjgvb fbnkjb bgfnkjnkg nkjbgfnkj nfg lkgbnkg njb nlkvgb ng uiufhdsn  idsuhfvh uhidfsrkgvlk uifesuhh sfgb dfuis jsgfbj sugfz dfgsbjn fsuidhkjfs dfseyuik diug
    kdhsxkn fjgkd djhglk dilkhn dshglui dlkxn kljdfsg kllllfdgxlk lkjfgdh lfdg kfgdhj lkkdfg lhkfdgj kljfgd lkhdfhgh lkfdg jhhfd kjhhdf kjdf oiujhs jhdfshi fsrghkjg hfkd hjkfdg hdfsi hkjdf hjkfdg hjkfd
        hkjdsf hkdfs lkh nkjhfdg lkdgs k klfgd  jkdshihkdsh hifdhkjx jhfh hkjfd jkhgdfs uhdsk hkjfdxh kjhds hjkdsf gkjds  rdkjop ouijtdjlk  rgdhk lkjdfgilj df ghkjjlk ihkjlokhdfg lkdfglkj dfg
        nlkdfl jlljfg l kjhfdlj kljfglkj lkjfbgol ljdfgilj lkjfdglkj lkjdfgkj lkhdfg hdf hkjdfg hlhdfg hkjd khdf kjhdf lkjudf kldf kldfg khdf khdf jkhfgd hfgd hkfdg
        nhfkdhnnlkdfj kljfjgd klhjfd kfdlg kjldfg klhfdg kljfdg hjkdfs kjhfs kjhds jkdfsh jgdfs</string>
    <string name="add_property">Add Property</string>
    <string name="add_property_image">Add Image</string>
    <string name="property_name">Property Name</string>
    <string name="total_room_flat">Total Room / Flat</string>
    <string name="property_capacity">Property Capacity</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="state">state</string>
    <string name="city">City</string>
    <string name="post_code">Postal Code</string>
    <string name="connect_with_landlord">Connect With Landlord</string>
    <string name="payment_setup">Payment Setup</string>
    <string name="discription">Description...</string>
    <string-array name="acc_type">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
</resources>
