<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Login"
    android:background="@drawable/background_image">

    <ImageView
        android:id="@+id/image_upkeep"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/upkeep_signup_image"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/scal_20dp"
        android:background="@drawable/ractangle"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textColor="@color/colorBrown"
            android:textSize="20dp"
            />
    <EditText
        android:id="@+id/edit_uname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:nextFocusDown="@+id/edit_eaddress"
        android:inputType="textPersonName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ractanglebox"
        android:hint="@string/user_name"
        android:paddingLeft="20dp"
        android:singleLine="true" />
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:nextFocusDown="@+id/edit_confpassword"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ractanglebox"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:imeOptions="actionDone"
        android:singleLine="true" />
    <TextView
        android:id="@+id/text_fpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorBrown"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/text_loginbtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ract_button"
        android:gravity="center"
        android:text="@string/login_button"
        android:textSize="20dp"
        android:textColor="@color/colorWhite" />
    <LinearLayout
        android:id="@+id/lin_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/text_alreadyaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/dont_account"
            android:textColor="@color/colorBrown"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/text_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/sign_up"
            android:textColor="@color/colorGreen"
            android:layout_marginLeft="5dp"
            android:textSize="15dp"
            />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>