<LinearLayout android:id="@+id/linear_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="4"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/imgtxt_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorLightgray"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/home" />

        <TextView
            android:id="@+id/text_home1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home"
            android:gravity="center"
            android:textColor="@color/colorBrown"
            android:layout_marginBottom="5dp"
            android:textAllCaps="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imgtxt_repair"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorLightgray"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_repair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/repair" />

        <TextView
            android:id="@+id/test_repair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/repair"
            android:textAllCaps="true"
            android:textColor="@color/colorBrown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imgtxt_banking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorLightgray"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_banking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/banking"
            android:padding="10dp" />

        <TextView
            android:id="@+id/text_banking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banking"
            android:gravity="center"
            android:textColor="@color/colorBrown"
            android:layout_marginBottom="5dp"
            android:textAllCaps="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imgtxt_chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorChat"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/chat"
            android:padding="10dp" />

        <TextView
            android:id="@+id/text_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:gravity="center"
            android:textColor="@color/colorGreen"
            android:layout_marginBottom="5dp"
            android:textAllCaps="true" />

    </LinearLayout>

</LinearLayout>