<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Tenant_GetStarted"
    android:background="@color/colorGreen">
    <ImageView
        android:id="@+id/image_headtenant"
        android:layout_width="@dimen/scal_25dp"
        android:layout_height="@dimen/scal_40dp"
        android:src="@drawable/back_arrow"
        android:layout_marginLeft="@dimen/scal_20dp"/>
    <LinearLayout
        android:id="@+id/lin_tenant_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/_tenant_upkeep_image"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/upkeep_signup_image"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/text_tenant_getstarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/get_started"
            android:textColor="@color/colorWhite"
            android:textAllCaps="true"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin_connect_landlord"
        android:layout_below="@+id/lin_image_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/scal_40dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/scal_25dp">
        <ImageView
            android:id="@+id/image_layer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/layer"
            android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/text_connect_landlord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="18dp"
            android:textColor="@color/colorWhite"
            android:text="@string/connect_with_landlord"/>
        <ImageView
            android:id="@+id/image_circlecheck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/circle_click"
            android:layout_marginRight="30dp"
            android:layout_weight="0.1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/my_proprty"
        android:layout_below="@+id/lin_image_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/scal_40dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/scal_25dp">
        <ImageView
            android:id="@+id/myprop_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/banking_active"
            android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/text_myprop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="18dp"
            android:textColor="@color/colorWhite"
            android:text="@string/payment_setup"/>
        <ImageView
            android:id="@+id/image_circle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_image"
            android:layout_marginRight="30dp"
            android:layout_weight="0.1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin_termscondition"
        android:layout_below="@+id/banking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.9">
            <TextView
                android:id="@+id/text_termsconditions1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_to_the"
                android:textColor="@color/colorWhite"
                />
            <TextView
                android:id="@+id/text_termsconditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:layout_marginLeft="4dp"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>
        <CheckBox
            android:id="@+id/checkbox_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_image"
            android:buttonTint="@color/colorWhite"
            android:layout_weight="0.1"/>
    </LinearLayout>
    <TextView
        android:layout_below="@+id/text_tenant_complete"
        android:id="@+id/text_btncompleted"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/completed_rac"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/completed"
        android:textColor="@color/colorWhite"
        android:textSize="18dp" />

</LinearLayout>